game components testing

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
     "cSpell.words": [
+        "columnnum",
+        "Loadedstore",
         "Pointercolumn",
         "testid",
         "textcolor",
