main menu components

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,11 @@
 {
     "cSpell.words": [
         "columnnum",
+        "cpuvp",
         "Loadedstore",
+        "Phandler",
         "Pointercolumn",
+        "PVCPU",
         "testid",
         "textcolor",
         "webfonts"
