--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,11 +1,18 @@
 {
     "cSpell.words": [
+        "checkforwin",
+        "codegen",
         "columnnum",
+        "comlink",
         "cpuvp",
+        "forwardslash",
+        "Grotesk",
         "Loadedstore",
+        "notwin",
         "Phandler",
         "Pointercolumn",
         "PVCPU",
+        "reduxjs",
         "testid",
         "textcolor",
         "webfonts"
