attempting to deploy

--- a/package.json
+++ b/package.json
@@ -60,5 +60,5 @@
   "bugs": {
     "url": "https://github.com/ElizabethKennedy/connect-four-2p/issues"
   },
-  "homepage": "https://github.com/ElizabethKennedy/connect-four-2p#readme"
+  "homepage": "https://github.com/ElizabethKennedy/connect-four-2p/"
 }
